# guardian-content-stream

./: Makefile  README.md  pyproject.toml  template.yaml
events/: test-event-happy-path.json  test-event-invalid-date.json  test-event-minimal.json  test-event-missing-search.json
scripts/: measure_cold_start.py
src/guardian_stream/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  guardian_client.py  handler.py  models.py  orchestrator.py  publisher.py
tests/: __init__.py
tests/infrastructure/: test_sam_template.py
tests/integration/: __init__.py  test_guardian_client_live.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_guardian_client.py  test_handler.py  test_models.py  test_orchestrator.py  test_publisher.py  test_security_edge_cases.py
