[project]
name = "guardian-stream"
version = "0.1.0"
description = "Microservice to query Guardian API and publish articles to AWS Kinesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardian_stream"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
